# live-stream-chat

./: README.md
server/: client.http  package-lock.json  package.json
server-rust/: Cargo.toml  cleint.http  client.http
server-rust/docker/: create_room.sql
server-rust/migrations/: 20250724191953_create_room.sql  20250724192523_create_question.sql  20250725182716_audio_chunks.sql
server-rust/src/: env.rs  main.rs  startup.rs
server-rust/src/db/: configuration.rs  mod.rs  seeder.rs
server-rust/src/routes/: create_question.rs  create_room.rs  get_room_questions.rs  get_rooms.rs  mod.rs  upload_audio.rs
server/src/: env.ts  server.ts
server/src/db/: seed.ts
server/src/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
server/src/http/routes/: create-question.ts  create-room.ts  get-room-questions.ts  get-rooms.ts  upload-audio.ts
server/src/services/: gemini.ts
web/: package-lock.json  package.json
web/src/components/: create-room-form.tsx  question-form.tsx  question-item.tsx  question-list.tsx  room-list.tsx
web/src/http/: use-create-question.ts  use-create-room.ts  use-room-questions.ts
web/src/http/types/: get-room-questions-response.ts
web/src/pages/: create-room.tsx  record-room-audio.tsx  room.tsx
