[package]
name = "nlw-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
dotenv = "0.15.0"
serde_json = "1"
futures = "0.3"
serde = {version = "1.0.219", features = ["derive"]} 
actix-multipart = "0.7.2"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }


[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls", "postgres", "uuid", "migrate", "time", "uuid"
]
